Application/argocd-gateway/1010-gateway-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gw
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/component: gateway
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      hostname: sargocd.icanvoca.com
      port: 8088
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
    - name: websecure
      hostname: sargocd.icanvoca.com
      port: 4438
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: argocd-tls-secret
      allowedRoutes:
        namespaces:
          from: Same
